--- a/summary.tex
+++ b/summary.tex
@@ -1,5 +1,23 @@
-\section{Summary}
+\section{摘要}
 \label{sec:summary}
+本报告基于Hadoop2.8源码，采用Eclipse作为阅读源代码的工具，对hadoop文件系统按FileSystem、AbstractFileSystem、FsDataOutputStream、FsDatainputStream四个部分进行分析。在详细阅读源代码的基础上，我们小组在本报告中给出了源代码的详细类图和核心过程的顺序图，验证了Hadoop文件系统中涉及到的软件体系结构风格。此报告的最后，我们小组对老师提供的分析报告给出修正和完整的分析过程。
 
-%% 结束
+
+\section{分工}
+\label{sec:undefined}
+源代码分析：
+FileSystem                  乔新文
+AbstractFileSystem          罗赛男
+FsDataOutputStream          康赣鹏
+FsDatainputStream        李约瀚、杨瑞
+\newline
+报告撰写：
+摘要                        罗赛男
+SA                          康赣鹏
+fix                         李约瀚（组长）
+校审                        乔新文、杨瑞
+\newline
+此次协作在github上完成：https://github.com/XDUSakura/report.git        
+
+%% 缁撴潫
 \endinput
