--- a/UML/inputstream/inputstream.tex
+++ b/UML/inputstream/inputstream.tex
@@ -1,5 +1,6 @@
 %% 结束
 \subsection{InputStream 代码分析}
+\input{UML/inputstream/inputs}
 \input{UML/inputstream/DataInput}
 \input{UML/inputstream/DataInputStream}
 \input{UML/inputstream/FSDataInputStream}
