--- a/report.tex
+++ b/report.tex
@@ -57,7 +57,7 @@
    \and 康赣鹏 \\ 14130140xxx \\ email@domain%
    \and 乔新文 \\ 141301400393 \\ starsriver@outlook.com %
    \and 罗赛男 \\ 14130140363 \\ luosainan96@163.com%
-   \and  杨瑞  \\ 14130140xxx \\ email@domain%
+   \and  杨瑞  \\ 14130140342 \\ rioyoung3@gmail.com%
    % 格式 姓名 【换行】 学号 【换行】 邮箱 【换行】 邮箱 （可以只有一个。。。
    }
 
