--- a/UML/inputstream/inputs.tex
+++ b/UML/inputstream/inputs.tex
@@ -3,7 +3,7 @@
 	
 	\begin{figure}
 		\centering
-		%\includegraphics[width=3in,height=3in]{UML/inputstream/summary.jpg}
+	    \includegraphics[width=3in,height=3in]{UML/inputstream/hdfs-common-inputstream-diagram.png}
 		\caption{IntputStream类结构层次}
 		\label{fig:graph1}
 	\end{figure}
