--- a/UML/outputstream/outputstream.tex
+++ b/UML/outputstream/outputstream.tex
@@ -332,7 +332,7 @@ public interface CanSetDropBehind {
 }
 \end{java}
 HDFS写文件过程
-\begin{figure}[h]
+\begin{figure}
 \centering
 \includegraphics[width =1\linewidth]{write.png}
 \caption{HDFS写文件时序图}
@@ -341,7 +341,7 @@ HDFS写文件过程
 
 Path
 
-\begin{figure}[h]
+\begin{figure}
 \centering
 \includegraphics[width =1\linewidth]{6.png}
 \caption{Path}
