--- a/UML/inputstream/DataInput.tex
+++ b/UML/inputstream/DataInput.tex
@@ -34,7 +34,7 @@ interface DataInput {
 \begin{java}    
     int skipBytes(int n) throws IOException;
 \end{java}
-之后是一些用于从中读取Java基础类型的方法，从二进制流经行序列化。
+之后是一些用于从中读取Java基础类型的方法，从二进制流进行反序列化。
 \begin{java}   
     boolean readBoolean() throws IOException;
     byte readByte() throws IOException;
