--- a/FIX/11.tex
+++ b/FIX/11.tex
@@ -2,6 +2,6 @@
 \subsection{批注十一的回答}
 \label{sec:fix:bl11}
 
-\lstinline|Closeable| 这个接口从字面意义上来讲，大致是“可以关闭的”的意思。一般指一些需要进行关闭的操作，来关闭关闭、释放一些系统资源。
+\lstinline|Closeable| 这个接口从字面意义上来讲，大致是“可以关闭的”的意思。一般指一些需要进行关闭的操作，来关闭、释放一些系统资源。
 例如 文件流，Socket 套接字，管道，硬件等打开时系统会为之分配一些资源，然后需要在不要的时候关闭，一方面释放资源，另一方面停止占用。
 这样设计能比较不错的管理资源。
