--- a/FIX/3.tex
+++ b/FIX/3.tex
@@ -4,5 +4,5 @@
 \label{sec:fix:bl3}
 
 这里的“本地”一词用来指代所在的操作系统中的文件系统的抽象层。
-由于各类操作系统本身的特性，无论是那种操作系统，都需要一层“文件系统抽象层”来讲不同的文件系统抽象出来。
+由于各类操作系统本身的特性，无论是那种操作系统，都需要一层“文件系统抽象层”来将不同的文件系统抽象出来。
 这里的“本地”的意思就是使用这一层抽象层，而不是具体的文件系统
