--- a/FIX/4.tex
+++ b/FIX/4.tex
@@ -7,7 +7,7 @@
 诸如腾讯云，青云，阿里云，亚马逊云，微软的Azure等云服务提供商，会提供多种服务，包括云主机的业务，和文件存储的服务。
 通常情况下，储存数据的选择有很多，可以使用数据库，无论是传统的数据库还是 NoSQL 的数据库，同时还可以选择“硬盘”。
 云服务上提供的“硬盘”，通常有两种，一种是提供给虚拟主机使用的硬盘，与物理主机使用的硬盘类似。此外还有另一种，
-存储服务，由于前者并不适用于很多业务场景，诸如一份大文件为需要被很多节点使用，所以大多是提供云服务的服务商，同时提供了
+存储服务，由于前者并不适用于很多业务场景，诸如一份大文件会需要被很多节点使用，所以大多是提供云服务的服务商，同时提供了
 对象存储服务。下面是摘录自腾讯云\textit{对象存储服务}页面的一段介绍内容：
 \begin{quote}
     对象存储（Cloud Object Storage）是面向企业和个人开发者提供的高可用，高稳定，强安全的云端存储服务。
