--- a/SA.tex
+++ b/SA.tex
@@ -31,7 +31,7 @@ DECORATOR \& ADAPTER：
 Decorator 装饰器 ：对客户端透明的方式扩展对象的功能，是继承关系的一个替代方案，提供比继承更多的灵活性。使用原来被装饰的类的一个子类的实例，把客户端的调用委派到被装饰类。
 Adapter适配器 ：把一个类的接口变换成客户端所期待的另一种接口，从而使原本因接口原因不匹配而无法一起工作的两个类能够一起工作。适配类可以根据参数返还一个合适的实例给客户端。
 总而言之：多态：父类型的引用可以指向子类的对象。
-\begin{figure}
+\begin{figure}[h]
 \centering
 \includegraphics[width =1\linewidth]{positioncache.png}
 \caption{PositionCache}
