--- a/UML/outputstream/outputstream.tex
+++ b/UML/outputstream/outputstream.tex
@@ -339,7 +339,7 @@ public interface CanSetDropBehind {
 HDFS写文件过程
 \begin{figure}
 \centering
-\includegraphics[width =1\linewidth]{uml/outputstream/write.png}
+\includegraphics[width =1\linewidth]{UML/outputstream/write.png}
 \caption{HDFS写文件时序图}
 \label{fig:HDFS写文件时序图}
 \end{figure}
