--- a/SA.tex
+++ b/SA.tex
@@ -1,7 +1,9 @@
 \section{Software Architecture}
+\subsection{涉及到的体系结构}
 本组源码分析涉及到的软件体系结构有：OO、Decorator、Adapter、Pipe、Logging、Interpreter、Layer
 
 主要体系风格为：OBJECT ORIENTED和 DECORATOR & ADAPTER
+
 \subsection{OBJECT ORIENTED}
 OBJECT ORIENTED三大主要特性：
 封装：将不需要对外提供的内容都隐藏起来；把属性都隐藏，提供公共方法对其访问
@@ -28,7 +30,8 @@ end{java}
 
 这里体现了面向对象体系结构风格中的多态性，任何outputStream的子类都可以Upcast，向上转型为outputstream，并作为参数输入
 总而言之：多态：父类型的引用可以指向子类的对象。
-\subsection{DECORATOR & ADAPTER}
+
+\subsection{DECORATOR和ADAPTER}
 
 DECORATOR & ADAPTER：
 Decorator 装饰器 ：对客户端透明的方式扩展对象的功能，是继承关系的一个替代方案，提供比继承更多的灵活性。使用原来被装饰的类的一个子类的实例，把客户端的调用委派到被装饰类。
