--- a/SA.tex
+++ b/SA.tex
@@ -1,6 +1,6 @@
 \section{软件体系结构}
 \label{sec:sa}
-
+\subsection{涉及到的体系结构}
 本组源码分析涉及到的软件体系结构有：OO、Decorator、Adapter、Pipe、Logging、Interpreter、Layer
 
 主要体系风格为：OBJECT ORIENTED和 DECORATOR \& ADAPTER.
