--- a/UML/inputstream/inputs.tex
+++ b/UML/inputstream/inputs.tex
@@ -3,7 +3,7 @@
 	
 	\begin{figure}
 		\centering
-	    \includegraphics[width=3in,height=3in]{UML/inputstream/hdfs-common-inputstream-diagram.png}
+	    \includegraphics[width=0.7\linewidth]{UML/inputstream/hdfs-common-inputstream-diagram.png}
 		\caption{IntputStream类结构层次}
 		\label{fig:graph1}
 	\end{figure}
@@ -13,7 +13,7 @@
 	
 	\begin{figure}
 		\centering
-		\includegraphics[width=3in,height=3in]{UML/inputstream/common-io-diagram.png}
+		\includegraphics[width=0.7\linewidth]{UML/inputstream/common-io-diagram.png}
 		\caption{IntputStream部分类}
 		\label{fig:graph2}
 	\end{figure}
@@ -23,7 +23,7 @@
 	
 	\begin{figure}
 		\centering
-		\includegraphics[width=3in,height=3in]{UML/inputstream/hdfs-fsinputstream-methods-diagram.png}
+		\includegraphics[width=0.7\linewidth]{UML/inputstream/hdfs-fsinputstream-methods-diagram.png}
 		\caption{hdfs-fsinputstream-methods-diagram}
 		\label{fig:graph3}
 	\end{figure}
@@ -57,7 +57,7 @@
 	
 	\begin{figure}
 		\centering
-		\includegraphics[width=3in,height=3in]{UML/inputstream/FSInputChecker.png}
+		\includegraphics[width=0.7\linewidth]{UML/inputstream/FSInputChecker.png}
 		\caption{FSInputChecker}
 		\label{fig:graph7}
 	\end{figure}
@@ -65,7 +65,7 @@
 	FilterFileSystem 类包含了一个其它的文件系统的实例 fs，并将其作为基本的文件系统。FilterFileSystem 类几乎将所有重写的方法交给了其内部保存的 fs 来处理。但在交给 fs 处理之前，自己可以做一些处理，以此来实现过滤。
 	\begin{figure}
 		\centering
-		\includegraphics[width=3in,height=3in]{UML/inputstream/BufferedFSInputStream.png}
+		\includegraphics[width=0.7\linewidth]{UML/inputstream/BufferedFSInputStream.png}
 		\caption{BufferedFSInputStream}
 		\label{fig:graph8}
 	\end{figure}
